--- a/index.html
+++ b/index.html
@@ -1,85 +1,221 @@
-body {
-    margin: 0;
-    font-family: Arial, sans-serif;
-    background: #f4f4f4;
-    color: #333;
-}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>ModMyEngine – Performance Auto Parts</title>
+  <style>
+    /* General Reset */
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
 
-header {
-    background: #111;
-    color: white;
-    display: flex;
-    justify-content: space-between;
-    padding: 1em 2em;
-    align-items: center;
-}
+    body {
+        font-family: Arial, sans-serif;
+        background: #f4f4f4;
+        color: #333;
+        line-height: 1.6;
+    }
 
-.logo {
-    font-size: 1.5em;
-    font-weight: bold;
-}
+    header {
+        background: #111;
+        color: white;
+        display: flex;
+        justify-content: space-between;
+        padding: 1em 2em;
+        align-items: center;
+    }
 
-nav ul {
-    list-style: none;
-    display: flex;
-    gap: 1em;
-}
+    .logo {
+        font-size: 1.5em;
+        font-weight: bold;
+    }
 
-nav a {
-    color: white;
-    text-decoration: none;
-}
+    nav ul {
+        list-style: none;
+        display: flex;
+        gap: 1em;
+    }
 
-.hero {
-    background: url('garage-background.jpg') no-repeat center center/cover;
-    color: white;
-    text-align: center;
-    padding: 4em 2em;
-}
+    nav a {
+        color: white;
+        text-decoration: none;
+        font-weight: bold;
+    }
 
-.cta-button {
-    background: #e63946;
-    color: white;
-    padding: 0.75em 1.5em;
-    text-decoration: none;
-    border-radius: 5px;
-    margin-top: 1em;
-    display: inline-block;
-}
+    .hero {
+        background: url('images/garage-background.jpg') no-repeat center center/cover;
+        color: white;
+        text-align: center;
+        padding: 4em 2em;
+    }
 
-.products {
-    padding: 2em;
-    background: #fff;
-}
+    .cta-button {
+        background: #e63946;
+        color: white;
+        padding: 0.75em 1.5em;
+        text-decoration: none;
+        border-radius: 5px;
+        margin-top: 1em;
+        display: inline-block;
+    }
 
-.product-grid {
-    display: flex;
-    gap: 2em;
-    flex-wrap: wrap;
-}
+    .products {
+        padding: 2em;
+        background: #fff;
+        text-align: center;
+    }
 
-.product-card {
-    background: #f9f9f9;
-    padding: 1em;
-    border-radius: 8px;
-    text-align: center;
-    width: 30%;
-}
+    .products h2 {
+        margin-bottom: 1em;
+    }
 
-.product-card img {
-    max-width: 100%;
-    border-radius: 4px;
-}
+    .product-grid {
+        display: flex;
+        gap: 2em;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
 
-.about, .contact {
-    padding: 2em;
-    background: #eee;
-    text-align: center;
-}
+    .product-card {
+        background: #f9f9f9;
+        padding: 1em;
+        border-radius: 8px;
+        text-align: center;
+        width: 280px;
+        box-shadow: 0 0 10px rgba(0,0,0,0.05);
+    }
 
-footer {
-    background: #222;
-    color: white;
-    text-align: center;
-    padding: 1em;
-}
+    .product-card img {
+        max-width: 100%;
+        border-radius: 4px;
+    }
+
+    .product-card h3 {
+        margin: 0.5em 0;
+    }
+
+    .product-card p.price {
+        font-weight: bold;
+        color: #e63946;
+        font-size: 1.1em;
+        margin-top: 0.5em;
+    }
+
+    .about, .contact {
+        padding: 2em;
+        background: #eee;
+        text-align: center;
+    }
+
+    footer {
+        background: #222;
+        color: white;
+        text-align: center;
+        padding: 1em;
+        font-size: 0.9em;
+    }
+
+    /* Responsive Layout */
+    @media screen and (max-width: 768px) {
+        .product-grid {
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .product-card {
+            width: 90%;
+            margin-bottom: 1.5em;
+        }
+
+        nav ul {
+            flex-direction: column;
+            gap: 0.5em;
+        }
+
+        header {
+            flex-direction: column;
+            text-align: center;
+        }
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <div class="logo">ModMyEngine</div>
+    <nav>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#products">Products</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <section class="hero">
+    <h1>Upgrade Your Ride</h1>
+    <p>High-performance auto parts for every engine enthusiast.</p>
+    <a href="#products" class="cta-button">Shop Now</a>
+  </section>
+
+  <section id="products" class="products">
+    <h2>Featured Auto Parts</h2>
+    <div class="product-grid">
+      <div class="product-card">
+        <img src="images/cold-air-intake.jpg" alt="Cold Air Intake" />
+        <h3>Cold Air Intake</h3>
+        <p>Boost your engine’s airflow and performance.</p>
+        <p class="price">$199.99</p>
+      </div>
+      <div class="product-card">
+        <img src="images/performance-exhaust.jpg" alt="Performance Exhaust" />
+        <h3>Performance Exhaust</h3>
+        <p>Deep tone, less restriction, more power.</p>
+        <p class="price">$349.99</p>
+      </div>
+      <div class="product-card">
+        <img src="images/suspension-kit.jpg" alt="Suspension Kit" />
+        <h3>Adjustable Suspension Kit</h3>
+        <p>Lower your ride and improve handling.</p>
+        <p class="price">$499.99</p>
+      </div>
+      <div class="product-card">
+        <img src="images/spark-plugs.jpg" alt="Spark Plugs" />
+        <h3>High-Performance Spark Plugs</h3>
+        <p>Efficient ignition for better fuel burn.</p>
+        <p class="price">$59.99</p>
+      </div>
+      <div class="product-card">
+        <img src="images/turbocharger.jpg" alt="Turbocharger Kit" />
+        <h3>Turbocharger Kit</h3>
+        <p>Major horsepower boost for forced induction builds.</p>
+        <p class="price">$1,299.99</p>
+      </div>
+      <div class="product-card">
+        <img src="images/brake-kit.jpg" alt="Performance Brake Kit" />
+        <h3>Performance Brake Kit</h3>
+        <p>Precision braking with vented rotors.</p>
+        <p class="price">$429.99</p>
+      </div>
+    </div>
+  </section>
+
+  <section id="about" class="about">
+    <h2>About ModMyEngine</h2>
+    <p>We’re dedicated to helping car enthusiasts get the most out of their vehicles with premium aftermarket parts and expert support.</p>
+  </section>
+
+  <section id="contact" class="contact">
+    <h2>Contact Us</h2>
+    <p>Email: support@modmyengine.com</p>
+    <p>Phone: (123) 456-7890</p>
+  </section>
+
+  <footer>
+    <p>&copy; 2025 ModMyEngine. All rights reserved.</p>
+  </footer>
+</body>
+</html>
