--- a/index.html
+++ b/index.html
@@ -174,37 +174,37 @@
     <h2>Featured Auto Parts</h2>
     <div class="product-grid">
       <div class="product-card">
-        <img src="images/cold-air-intake.jpg" alt="Cold Air Intake" />
+        <img src="cold.png" alt="Cold Air Intake" />
         <h3>Cold Air Intake</h3>
         <p>Boost your engine’s airflow and performance.</p>
         <p class="price">$199.99</p>
       </div>
       <div class="product-card">
-        <img src="images/performance-exhaust.jpg" alt="Performance Exhaust" />
+        <img src="exh.png" alt="Performance Exhaust" />
         <h3>Performance Exhaust</h3>
         <p>Deep tone, less restriction, more power.</p>
         <p class="price">$349.99</p>
       </div>
       <div class="product-card">
-        <img src="images/suspension-kit.jpg" alt="Suspension Kit" />
+        <img src="suspen.png" alt="Suspension Kit" />
         <h3>Adjustable Suspension Kit</h3>
         <p>Lower your ride and improve handling.</p>
         <p class="price">$499.99</p>
       </div>
       <div class="product-card">
-        <img src="images/spark-plugs.jpg" alt="Spark Plugs" />
+        <img src="plug.png" alt="Spark Plugs" />
         <h3>High-Performance Spark Plugs</h3>
         <p>Efficient ignition for better fuel burn.</p>
         <p class="price">$59.99</p>
       </div>
       <div class="product-card">
-        <img src="images/turbocharger.jpg" alt="Turbocharger Kit" />
+        <img src="turbo.png" alt="Turbocharger Kit" />
         <h3>Turbocharger Kit</h3>
         <p>Major horsepower boost for forced induction builds.</p>
         <p class="price">$1,299.99</p>
       </div>
       <div class="product-card">
-        <img src="images/brake-kit.jpg" alt="Performance Brake Kit" />
+        <img src="brake1.png" alt="Performance Brake Kit" />
         <h3>Performance Brake Kit</h3>
         <p>Precision braking with vented rotors.</p>
         <p class="price">$429.99</p>
