--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     }
 
     .hero {
-        background: url('images/garage-background.jpg') no-repeat center center/cover;
+        background: url('backauto.png') no-repeat center center/cover;
         color: white;
         text-align: center;
         padding: 4em 2em;
