--- a/index.html
+++ b/index.html
@@ -5,147 +5,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>ModMyEngine – Performance Auto Parts</title>
   <style>
-    /* General Reset */
-    * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-    }
-
-    body {
-        font-family: Arial, sans-serif;
-        background: #f4f4f4;
-        color: #333;
-        line-height: 1.6;
-    }
-
-    header {
-        background: #111;
-        color: white;
-        display: flex;
-        justify-content: space-between;
-        padding: 1em 2em;
-        align-items: center;
-    }
-
-    .logo {
-        font-size: 1.5em;
-        font-weight: bold;
-    }
-
-    nav ul {
-        list-style: none;
-        display: flex;
-        gap: 1em;
-    }
-
-    nav a {
-        color: white;
-        text-decoration: none;
-        font-weight: bold;
-    }
-
-    .hero {
-        background: url('backauto.png') no-repeat center center/cover;
-        color: white;
-        text-align: center;
-        padding: 4em 2em;
-    }
-
-    .cta-button {
-        background: #e63946;
-        color: white;
-        padding: 0.75em 1.5em;
-        text-decoration: none;
-        border-radius: 5px;
-        margin-top: 1em;
-        display: inline-block;
-    }
-
-    .products, .about, .why-us, .reviews, .contact {
-        padding: 2em;
-        background: #fff;
-        text-align: center;
-    }
-
-    .products h2, .about h2, .why-us h2, .reviews h2, .contact h2 {
-        margin-bottom: 1em;
-    }
-
-    .product-grid {
-        display: flex;
-        gap: 2em;
-        flex-wrap: wrap;
-        justify-content: center;
-    }
-
-    .product-card {
-        background: #f9f9f9;
-        padding: 1em;
-        border-radius: 8px;
-        text-align: center;
-        width: 280px;
-        box-shadow: 0 0 10px rgba(0,0,0,0.05);
-    }
-
-    .product-card img {
-        max-width: 100%;
-        border-radius: 4px;
-    }
-
-    .product-card h3 {
-        margin: 0.5em 0;
-    }
-
-    .product-card p.price {
-        font-weight: bold;
-        color: #e63946;
-        font-size: 1.1em;
-        margin-top: 0.5em;
-    }
-
-    .section-content {
-        max-width: 800px;
-        margin: auto;
-        text-align: left;
-    }
-
-    .review {
-        background: #f0f0f0;
-        padding: 1em;
-        margin: 1em auto;
-        border-left: 4px solid #e63946;
-        max-width: 700px;
-    }
-
-    footer {
-        background: #222;
-        color: white;
-        text-align: center;
-        padding: 1em;
-        font-size: 0.9em;
-    }
-
+    /* (Same CSS as before) */
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    body { font-family: Arial, sans-serif; background: #f4f4f4; color: #333; line-height: 1.6; }
+    header { background: #111; color: white; display: flex; justify-content: space-between; padding: 1em 2em; align-items: center; flex-wrap: wrap; }
+    .logo { font-size: 1.5em; font-weight: bold; }
+    nav ul { list-style: none; display: flex; gap: 1em; flex-wrap: wrap; }
+    nav a { color: white; text-decoration: none; font-weight: bold; }
+    .hero { background: url('images/garage-background.jpg') no-repeat center center/cover; color: black; text-align: center; padding: 4em 2em; }
+    .cta-button { background: #e63946; color: white; padding: 0.75em 1.5em; text-decoration: none; border-radius: 5px; margin-top: 1em; display: inline-block; }
+    .products, .about, .why-us, .reviews, .contact { padding: 2em; background: #fff; text-align: center; }
+    .product-grid { display: flex; gap: 2em; flex-wrap: wrap; justify-content: center; }
+    .product-card { background: #f9f9f9; padding: 1em; border-radius: 8px; text-align: center; width: 280px; box-shadow: 0 0 10px rgba(0,0,0,0.05); }
+    .product-card img { max-width: 100%; border-radius: 4px; }
+    .product-card h3 { margin: 0.5em 0; }
+    .product-card p.price { font-weight: bold; color: #e63946; font-size: 1.1em; margin-top: 0.5em; }
+    .section-content { max-width: 800px; margin: auto; text-align: left; }
+    .review { background: #f0f0f0; padding: 1em; margin: 1em auto; border-left: 4px solid #e63946; max-width: 700px; }
+    footer { background: #222; color: white; text-align: center; padding: 1em; font-size: 0.9em; }
     @media screen and (max-width: 768px) {
-        .product-grid {
-            flex-direction: column;
-            align-items: center;
-        }
-
-        .product-card {
-            width: 90%;
-            margin-bottom: 1.5em;
-        }
-
-        nav ul {
-            flex-direction: column;
-            gap: 0.5em;
-        }
-
-        header {
-            flex-direction: column;
-            text-align: center;
-        }
+        .product-grid { flex-direction: column; align-items: center; }
+        .product-card { width: 90%; margin-bottom: 1.5em; }
+        nav ul { flex-direction: column; gap: 0.5em; align-items: center; }
+        header { flex-direction: column; text-align: center; }
     }
   </style>
 </head>
@@ -154,17 +36,19 @@
     <div class="logo">ModMyEngine</div>
     <nav>
       <ul>
-        <li><a href="#">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="#products">Products</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#why-us">Why Us</a></li>
         <li><a href="#reviews">Reviews</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="terms.html">Terms</a></li>
+        <li><a href="policy.html">Privacy</a></li>
+        <li><a href="cookies.html">Cookies</a></li>
       </ul>
     </nav>
   </header>
-
-  <section class="hero">
+<section class="hero">
     <h1>Upgrade Your Ride</h1>
     <p>High-performance auto parts for every engine enthusiast.</p>
     <a href="#products" class="cta-button">Shop Now</a>
@@ -260,5 +144,9 @@
   <footer>
     <p>&copy; 2025 ModMyEngine. All rights reserved.</p>
   </footer>
+</body>
+</html>
+  
+
 </body>
 </html>
