--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <li><a href="#reviews">Reviews</a></li>
         <li><a href="contact.html">Contact</a></li>
         <li><a href="terms.html">Terms</a></li>
-        <li><a href="policy.html">Privacy</a></li>
+        <li><a href="privacy.html">Privacy</a></li>
         <li><a href="cookies.html">Cookies</a></li>
       </ul>
     </nav>
