--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     .logo { font-size: 1.5em; font-weight: bold; }
     nav ul { list-style: none; display: flex; gap: 1em; flex-wrap: wrap; }
     nav a { color: white; text-decoration: none; font-weight: bold; }
-    .hero { background: url('images/garage-background.jpg') no-repeat center center/cover; color: black; text-align: center; padding: 4em 2em; }
+    .hero { background: url('backauto.png') no-repeat center center/cover; color: black; text-align: center; padding: 4em 2em; }
     .cta-button { background: #e63946; color: white; padding: 0.75em 1.5em; text-decoration: none; border-radius: 5px; margin-top: 1em; display: inline-block; }
     .products, .about, .why-us, .reviews, .contact { padding: 2em; background: #fff; text-align: center; }
     .product-grid { display: flex; gap: 2em; flex-wrap: wrap; justify-content: center; }
