--- a/terms.html
+++ b/terms.html
@@ -11,6 +11,8 @@
     nav a { color: white; text-decoration: none; font-weight: bold; }
     main { padding: 2em; max-width: 800px; margin: auto; background: white; }
     h1 { margin-bottom: 1em; }
+    h2 { margin-top: 2em; }
+    p { line-height: 1.6; margin-bottom: 1em; }
   </style>
 </head>
 <body>
@@ -29,9 +31,37 @@
 
   <main>
     <h1>Terms & Conditions</h1>
-    <p>Welcome to ModMyEngine. By accessing or using our website, you agree to comply with the terms and conditions outlined below. Please read them carefully before using our services.</p>
-    <p>These terms govern your use of our site and products. Violations of these terms may result in termination of access. Content on this site may change without notice.</p>
-    <p>If you have any questions about these terms, please contact us.</p>
+    <p>Welcome to ModMyEngine! These Terms and Conditions govern your use of our website, services, and products. By accessing or using our website, you agree to comply with these terms. If you do not agree with any part of these terms, please do not use our services.</p>
+
+    <h2>1. Use of Website</h2>
+    <p>By using this website, you agree to abide by all the applicable laws and regulations. You may not use our website for illegal activities, and you must respect all intellectual property rights associated with the content on this site. We reserve the right to restrict or terminate your access to the website if you violate any of these terms.</p>
+
+    <h2>2. Product Information</h2>
+    <p>ModMyEngine provides detailed descriptions of our auto parts and services on our website. While we strive to keep our product listings accurate, we cannot guarantee that all information is error-free. Prices, availability, and product specifications are subject to change without prior notice. Please contact us if you have questions about any specific products.</p>
+
+    <h2>3. Ordering and Payments</h2>
+    <p>By placing an order on ModMyEngine, you agree to purchase the products under the terms specified on the order page. We accept various forms of payment, including credit/debit cards and online payment methods. You are responsible for providing accurate payment information. All transactions are processed securely, and your data is protected according to our privacy policy.</p>
+
+    <h2>4. Shipping and Delivery</h2>
+    <p>We offer shipping services to most regions. Shipping costs are calculated at checkout and depend on the shipping destination. We aim to process and ship your order within a reasonable timeframe; however, delivery times may vary based on factors beyond our control, such as weather conditions or delays with shipping carriers.</p>
+
+    <h2>5. Returns and Refunds</h2>
+    <p>If you are not satisfied with your purchase, we offer a return policy for most items within 30 days of receipt. To initiate a return, you must contact our customer support team. All returned products must be in unused and resalable condition. Please refer to our return policy for further details on how to process returns and refunds.</p>
+
+    <h2>6. Limitation of Liability</h2>
+    <p>ModMyEngine will not be held liable for any direct, indirect, incidental, or consequential damages that arise from the use or inability to use our website or products. We do not guarantee that our website will be error-free or uninterrupted, and we are not responsible for any loss of data or damage to your device caused by using the site.</p>
+
+    <h2>7. Intellectual Property</h2>
+    <p>All content on the ModMyEngine website, including text, graphics, logos, images, and software, is the property of ModMyEngine or its licensors and is protected by intellectual property laws. You may not use any of the materials on this site without obtaining prior written consent from us.</p>
+
+    <h2>8. Changes to Terms</h2>
+    <p>We reserve the right to update or modify these Terms & Conditions at any time without prior notice. Any changes will be posted on this page, and the updated terms will take effect as soon as they are published. It is your responsibility to review these terms regularly to stay informed about any changes.</p>
+
+    <h2>9. Governing Law</h2>
+    <p>These Terms & Conditions are governed by the laws of [Your Country]. Any legal disputes will be resolved in the appropriate courts located in [Your City, Country], and you agree to submit to the jurisdiction of those courts.</p>
+
+    <h2>10. Contact Information</h2>
+    <p>If you have any questions about these Terms & Conditions, please feel free to contact us at <strong>support@modmyengine.com</strong> or through our contact page.</p>
   </main>
 
   <footer>
