--- a/privacy.html
+++ b/privacy.html
@@ -4,7 +4,16 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Privacy Policy – ModMyEngine</title>
-  <style>/* Use same styling as above */</style>
+  <style>
+    body { font-family: Arial, sans-serif; margin: 0; padding: 0; background: #f9f9f9; color: #333; }
+    header, footer { background: #111; color: white; padding: 1em 2em; text-align: center; }
+    nav ul { list-style: none; display: flex; justify-content: center; gap: 1em; padding: 0; }
+    nav a { color: white; text-decoration: none; font-weight: bold; }
+    main { padding: 2em; max-width: 800px; margin: auto; background: white; }
+    h1 { margin-bottom: 1em; }
+    h2 { margin-top: 2em; }
+    p { line-height: 1.6; margin-bottom: 1em; }
+  </style>
 </head>
 <body>
   <header>
@@ -22,9 +31,53 @@
 
   <main>
     <h1>Privacy Policy</h1>
-    <p>ModMyEngine is committed to protecting your personal data. We collect only the necessary information to provide our services, including your name, email, and shipping details.</p>
-    <p>We never sell or share your data with third parties without your consent. All transactions are encrypted and secure.</p>
-    <p>By using our site, you consent to our privacy policy. For inquiries, please contact our support team.</p>
+    <p>Your privacy is important to us. At ModMyEngine, we are committed to protecting your personal data and being transparent about the information we collect. This Privacy Policy explains how we collect, use, and protect your personal information when you visit our website or make purchases from us.</p>
+
+    <h2>1. Information We Collect</h2>
+    <p>We collect several types of information in order to provide and improve our services to you. This includes:</p>
+    <ul>
+      <li><strong>Personal Information:</strong> When you make a purchase or create an account, we collect personal details such as your name, email address, phone number, and shipping address.</li>
+      <li><strong>Payment Information:</strong> We collect payment information, including credit card details or other payment methods, to process transactions securely.</li>
+      <li><strong>Usage Data:</strong> We collect non-personal information about how you use our website, including IP addresses, browser type, and device information, to help improve our services.</li>
+    </ul>
+
+    <h2>2. How We Use Your Information</h2>
+    <p>We use the information we collect for various purposes, including:</p>
+    <ul>
+      <li><strong>To Process Orders:</strong> Your personal and payment information is used to process and complete your orders and to deliver the purchased products.</li>
+      <li><strong>To Improve Our Services:</strong> We analyze user data to enhance the website's functionality, fix bugs, and ensure a better shopping experience.</li>
+      <li><strong>To Communicate with You:</strong> We may send you email notifications regarding your orders, product updates, promotions, or customer service inquiries. You can opt out of marketing emails at any time.</li>
+      <li><strong>To Protect Our Rights:</strong> In certain cases, we may use your information to prevent fraud, comply with legal obligations, or enforce our Terms and Conditions.</li>
+    </ul>
+
+    <h2>3. Sharing Your Information</h2>
+    <p>We respect your privacy and will not sell, rent, or trade your personal information to third parties. However, we may share your information with trusted third-party service providers who assist us in operating our website and conducting business activities, such as payment processors, shipping companies, and email marketing services. These third parties are obligated to keep your information confidential and use it only for the services they perform on our behalf.</p>
+
+    <p>We may also disclose personal data if required by law, such as in response to a subpoena or other legal process, or if we believe that such action is necessary to protect the rights, property, or safety of ModMyEngine, our customers, or others.</p>
+
+    <h2>4. Data Security</h2>
+    <p>We take data security seriously and implement a variety of security measures to protect your personal information from unauthorized access, alteration, or destruction. We use encryption technology (SSL) during online transactions and store your data on secure servers. However, please note that no data transmission over the internet is 100% secure, and we cannot guarantee the security of any information you transmit to us.</p>
+
+    <h2>5. Your Rights and Choices</h2>
+    <p>As a customer, you have several rights regarding your personal information:</p>
+    <ul>
+      <li><strong>Access:</strong> You have the right to request access to the personal data we hold about you.</li>
+      <li><strong>Correction:</strong> If you believe that the information we hold about you is incorrect, you can request corrections to be made.</li>
+      <li><strong>Deletion:</strong> You have the right to request that we delete your personal data, subject to certain legal exceptions.</li>
+      <li><strong>Opting Out of Communications:</strong> You can opt out of receiving marketing emails from us at any time by clicking the unsubscribe link in our emails.</li>
+    </ul>
+
+    <h2>6. Cookies and Tracking Technologies</h2>
+    <p>Our website uses cookies to improve your experience and track website performance. Cookies are small text files that are stored on your device and help us remember your preferences. You can control your cookie preferences through your browser settings, but please note that some features of the website may not function properly without cookies.</p>
+
+    <h2>7. Changes to This Privacy Policy</h2>
+    <p>We reserve the right to update or modify this Privacy Policy at any time. Any changes will be posted on this page, and the updated policy will take effect immediately after being published. We encourage you to review this policy periodically to stay informed about how we are protecting your information.</p>
+
+    <h2>8. Contact Us</h2>
+    <p>If you have any questions about this Privacy Policy or would like to exercise your rights regarding your personal information, please contact us at:</p>
+    <p><strong>Email:</strong> support@modmyengine.com</p>
+    <p><strong>Address:</strong> 1234 Engine Ave, ModCity, State, 12345</p>
+
   </main>
 
   <footer>
