--- a/cookies.html
+++ b/cookies.html
@@ -3,8 +3,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Cookie Policy – ModMyEngine</title>
-  <style>/* Use same styling as above */</style>
+  <title>Cookies Policy – ModMyEngine</title>
+  <style>
+    body { font-family: Arial, sans-serif; margin: 0; padding: 0; background: #f9f9f9; color: #333; }
+    header, footer { background: #111; color: white; padding: 1em 2em; text-align: center; }
+    nav ul { list-style: none; display: flex; justify-content: center; gap: 1em; padding: 0; }
+    nav a { color: white; text-decoration: none; font-weight: bold; }
+    main { padding: 2em; max-width: 800px; margin: auto; background: white; }
+    h1 { margin-bottom: 1em; }
+    h2 { margin-top: 2em; }
+    p { line-height: 1.6; margin-bottom: 1em; }
+  </style>
 </head>
 <body>
   <header>
@@ -21,10 +30,50 @@
   </header>
 
   <main>
-    <h1>Cookie Policy</h1>
-    <p>ModMyEngine uses cookies to enhance your experience. Cookies help us remember your preferences, track performance, and improve site usability.</p>
-    <p>You can disable cookies through your browser settings. However, doing so may affect your ability to use certain features of our site.</p>
-    <p>By continuing to use our website, you consent to our use of cookies as described.</p>
+    <h1>Cookies Policy</h1>
+    <p>At ModMyEngine, we value your privacy and are committed to being transparent about the information we collect. This Cookies Policy explains how we use cookies and other tracking technologies to enhance your experience while using our website.</p>
+
+    <h2>1. What Are Cookies?</h2>
+    <p>Cookies are small text files that are placed on your device (computer, smartphone, tablet) when you visit a website. They help the website remember your preferences, enhance your browsing experience, and collect information to improve the website's performance. Cookies are widely used to make websites work more efficiently and to provide a personalized experience.</p>
+
+    <h2>2. Types of Cookies We Use</h2>
+    <p>We use several types of cookies on our website:</p>
+    <ul>
+      <li><strong>Essential Cookies:</strong> These cookies are necessary for the basic functionality of the website. Without them, certain services (like making a purchase or accessing account information) may not be possible.</li>
+      <li><strong>Performance Cookies:</strong> These cookies collect information about how visitors interact with our website, such as which pages are visited most often and whether users encounter error messages. These cookies help us improve the performance of our website.</li>
+      <li><strong>Functional Cookies:</strong> These cookies allow us to remember your preferences, such as language or location, to provide a more personalized experience on our website.</li>
+      <li><strong>Targeting or Advertising Cookies:</strong> These cookies are used to deliver advertisements that are relevant to you and your interests. They may also be used to limit the number of times you see an advertisement and to measure the effectiveness of ad campaigns.</li>
+    </ul>
+
+    <h2>3. How We Use Cookies</h2>
+    <p>We use cookies for several purposes, including:</p>
+    <ul>
+      <li><strong>Enhancing User Experience:</strong> Cookies allow us to personalize your visit by remembering your preferences and past interactions with our website.</li>
+      <li><strong>Analytics:</strong> We use cookies to collect data about website usage, helping us understand how visitors use our site, what content is most popular, and how we can improve the user experience.</li>
+      <li><strong>Advertising and Marketing:</strong> We use cookies to show you ads that are more relevant to your interests and track the effectiveness of our marketing campaigns.</li>
+    </ul>
+
+    <h2>4. Third-Party Cookies</h2>
+    <p>In addition to our own cookies, we may also use third-party cookies from trusted service providers. These third parties may use cookies to track your online activities across different websites and provide you with targeted ads. You can choose to block or manage these cookies through your browser settings.</p>
+
+    <h2>5. Managing Cookies</h2>
+    <p>You have control over cookies. You can manage or disable cookies in your browser settings. However, please note that disabling certain cookies may affect the functionality of the website and limit your user experience. The steps to manage cookies differ depending on your browser. Below are general instructions:</p>
+    <ul>
+      <li><strong>For Google Chrome:</strong> Go to Settings > Privacy and security > Cookies and other site data. Here you can manage your cookie preferences.</li>
+      <li><strong>For Mozilla Firefox:</strong> Go to Options > Privacy & Security > Cookies and Site Data. You can choose to block or delete cookies.</li>
+      <li><strong>For Safari:</strong> Go to Preferences > Privacy > Cookies and website data. You can manage your preferences here.</li>
+    </ul>
+
+    <h2>6. Consent to Cookies</h2>
+    <p>By continuing to use our website, you consent to the use of cookies as described in this policy. If you do not agree to our use of cookies, you can modify your browser settings to block them. However, please note that blocking some cookies may impact your experience on our website.</p>
+
+    <h2>7. Changes to This Cookies Policy</h2>
+    <p>We reserve the right to update or modify this Cookies Policy at any time. Any changes will be posted on this page, and the updated policy will take effect immediately after being published. We encourage you to review this policy periodically to stay informed about how we are using cookies.</p>
+
+    <h2>8. Contact Us</h2>
+    <p>If you have any questions about our Cookies Policy or would like to exercise your rights regarding cookies, please contact us at:</p>
+    <p><strong>Email:</strong> support@modmyengine.com</p>
+
   </main>
 
   <footer>
