--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,20 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Contact Us – ModMyEngine</title>
-  <style>/* Use same styling as above */</style>
+  <style>
+    body { font-family: Arial, sans-serif; margin: 0; padding: 0; background: #f9f9f9; color: #333; }
+    header, footer { background: #111; color: white; padding: 1em 2em; text-align: center; }
+    nav ul { list-style: none; display: flex; justify-content: center; gap: 1em; padding: 0; }
+    nav a { color: white; text-decoration: none; font-weight: bold; }
+    main { padding: 2em; max-width: 800px; margin: auto; background: white; }
+    h1 { margin-bottom: 1em; }
+    h2 { margin-top: 2em; }
+    p { line-height: 1.6; margin-bottom: 1em; }
+    form { display: flex; flex-direction: column; gap: 1em; }
+    input, textarea { padding: 10px; border: 1px solid #ccc; border-radius: 5px; font-size: 1em; }
+    button { padding: 10px; border: none; background: #111; color: white; font-size: 1.1em; cursor: pointer; }
+    button:hover { background: #444; }
+  </style>
 </head>
 <body>
   <header>
@@ -22,13 +35,37 @@
 
   <main>
     <h1>Contact Us</h1>
-    <p>If you have any questions, feedback, or need support, we're here to help.</p>
+    <p>Thank you for visiting ModMyEngine! We value our customers and are always here to help. If you have any questions, comments, or feedback, feel free to reach out to us using the contact form below or through the provided contact information.</p>
+
+    <h2>Get in Touch</h2>
+    <p>We are happy to assist with any inquiries related to our products, services, or general support. Whether you need help choosing the right auto parts, have questions about an order, or want to provide feedback on your experience, we're here to listen and assist you.</p>
+    <p>Please fill out the form below, and our customer support team will get back to you as soon as possible. We aim to respond to all inquiries within 1-2 business days.</p>
+
+    <h2>Contact Form</h2>
+    <form action="#" method="post">
+      <label for="name">Your Name</label>
+      <input type="text" id="name" name="name" placeholder="Enter your full name" required />
+
+      <label for="email">Your Email</label>
+      <input type="email" id="email" name="email" placeholder="Enter your email address" required />
+
+      <label for="subject">Subject</label>
+      <input type="text" id="subject" name="subject" placeholder="Subject of your message" required />
+
+      <label for="message">Your Message</label>
+      <textarea id="message" name="message" rows="5" placeholder="Write your message here" required></textarea>
+
+      <button type="submit">Send Message</button>
+    </form>
+
+    <h2>Other Ways to Reach Us</h2>
+    <p>If you prefer to reach us through other means, you can use the following contact details:</p>
     <ul>
-      <li><strong>Email:</strong> support@modmyengine.com</li>
-      <li><strong>Phone:</strong> (123) 456-7890</li>
-      <li><strong>Hours:</strong> Mon–Fri, 9 AM to 6 PM (PST)</li>
+      <li><strong>Email:</strong> <a href="mailto:support@modmyengine.com">support@modmyengine.com</a></li>
+      <li><strong>Phone:</strong> +1 (855) 292-8820</li>
+    
     </ul>
-    <p>You can also reach out via our social media channels or use our online contact form.</p>
+
   </main>
 
   <footer>
